--- a/src/components/PageList.css
+++ b/src/components/PageList.css
@@ -1,3 +1,55 @@
+.page_list{
+	height: 98%;
+	overflow-y: auto;
+}
+
 .page_item{
-	
+	height: 70px;
+    color: #76838f;
+    cursor: pointer;
+    font-size: 12px;
+    position: relative;
+    border: 1px solid #ccd5db;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    background: #fff;
+    position: relative;
+   
+}
+.page_item:hover{
+	box-shadow: 0 0 4px #CCD5DB;
+}
+.page_item_num{
+	float: left;
+    width: 0;
+    height: 0;
+    border-top: 35px solid #76838f;
+    border-right: 35px solid transparent;
+}
+.page_item_num_active{
+    border-top: 35px solid #08a1ef;
+    border-right: 35px solid transparent;
+}
+.page_item_num_em{
+	position: absolute;
+    top: 3px;
+    color: #fff;
+    left: 0;
+    display: block;
+    width: 20px;
+    text-align: center;
+}
+.page_item_title{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.page_button_add{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	font-size: 2rem;
 }
