--- a/src/routes/Editor.css
+++ b/src/routes/Editor.css
@@ -9,5 +9,25 @@
 .page_content {
 	background: '#fff';
 	padding: 24px;
-	margin: 0
+	margin: 0;
+	position: relative;
+}
+
+
+.document_main{
+	width: 100%;
+	height: 100%;
+}
+.page_main {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	
+}
+.editor_tools{
+	text-align: center;
+}
+.editor_tools button {
+	margin-right: 10px;
 }
