--- a/src/components/ContentEditor.css
+++ b/src/components/ContentEditor.css
@@ -6,3 +6,10 @@
 	background: #FFFFFF;
 	box-shadow: 0 0 6 #CCD5DB;
 }
+
+.shape{
+	position: absolute;
+	left: 50%;
+	top:50%;
+	transform: translate(-50%,-50%);
+}
