--- a/src/components/ContentEditor.css
+++ b/src/components/ContentEditor.css
@@ -4,12 +4,18 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	background: #FFFFFF;
-	box-shadow: 0 0 6 #CCD5DB;
+	box-shadow: 0 0 6px #CCD5DB;
+	margin-top: 100px;
+	margin-bottom: 100px;
 }
 
 .shape{
 	position: absolute;
 	left: 50%;
 	top:50%;
-	transform: translate(-50%,-50%);
+}
+
+.shape_content{
+	width: 100%;
+	height: 100%;
 }
