--- a/src/routes/Editor.css
+++ b/src/routes/Editor.css
@@ -7,8 +7,7 @@
 }
 
 .page_content {
-	background: '#fff';
-	padding: 24px;
+	padding: 0;
 	margin: 0;
 	position: relative;
 }
@@ -19,11 +18,10 @@
 	height: 100%;
 }
 .page_main {
+	display: block;
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	
+	width: 100%;
+	height: 100%;
 }
 .editor_tools{
 	text-align: center;
