--- a/src/components/AnimationList.css
+++ b/src/components/AnimationList.css
@@ -3,6 +3,7 @@
 }
 
 .panel_list{
+	position: relative;
 }
 .panel_list .ant-collapse-header{
 	background: #CCD5DB;
@@ -10,4 +11,14 @@
 .animation_item{
    padding-left: 15px;
    margin-bottom: 10px;
+}
+
+.animation_delete{
+	position: absolute;
+	right: 5px;
+	top: 10px;
+	cursor:hand;
+}
+.animation_delete:hover{
+	color:red
 }
