--- a/src/components/ContentEditor.css
+++ b/src/components/ContentEditor.css
@@ -1,12 +1,7 @@
-.document_warpper {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+.page_warpper {
+	position: relative;
 	background: #FFFFFF;
 	box-shadow: 0 0 6px #CCD5DB;
-	margin-top: 100px;
-	margin-bottom: 100px;
 }
 
 .shape{
