--- a/src/components/ContentEditor.css
+++ b/src/components/ContentEditor.css
@@ -18,3 +18,25 @@
 	width: 100%;
 	max-height: 100%;
 }
+
+
+.iframe{
+	width: 100%;
+	height: 100%;
+	border: none;
+	position: relative;
+}
+.mask{
+   position: absolute;
+   left: 0;
+   top: 0;
+   width: 100%;
+	height: 100%;
+}
+
+.video{
+	width: 100%;
+	height: 100%;
+	border: none;
+	position: relative;
+}
