--- a/src/components/Showing.css
+++ b/src/components/Showing.css
@@ -1,5 +1,8 @@
 .swiper{
-	
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
 }
 .swiper > div{
     height: 100%;
@@ -16,4 +19,11 @@
 .shape img{
 	width: 100%;
 	max-height: 100%;
+}
+
+.showpage_warpper{
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	position: relative;
 }
